--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Movie</string>
     <string name="search_hint">movie name</string>
+    <string name="no_result">No Result</string>
 </resources>
