--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Movie</string>
     <string name="search_hint">movie name</string>
     <string name="no_result">No Result</string>
+    <string name="vote_average">vote average : </string>
+    <string name="language">Language</string>
+    <string name="overview">Overview</string>
+    <string name="genre">genre : </string>
 </resources>
